tests/dataset/tpc-ds/compiler/c/q2.error
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c: In function ‘test_TPCDS_Q2_result’:
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:291:46: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  291 |   if (test_TPCDS_Q2_result_result.len != tmp1.len) {
      |                                              ^
      |                                              ->
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:295:55: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  295 |       if (test_TPCDS_Q2_result_result.data[i3] != tmp1.data[i3]) {
      |                                                       ^
      |                                                       ->
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:372:19: error: invalid initializer
  372 |   list_int wscs = (tmp4) union(tmp7);
      |                   ^
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:372:26: error: expected ‘,’ or ‘;’ before ‘union’
  372 |   list_int wscs = (tmp4) union(tmp7);
      |                          ^~~~~
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:379:14: error: request for member ‘sold_date_sk’ in something not a structure or union
  379 |       if (!(w.sold_date_sk == d.d_date_sk)) {
      |              ^
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:384:31: error: ‘wswscs_item_t’ has no member named ‘name’
  384 |         if (strcmp(wswscs[i13].name, (tmp_item_t){.week_seq = d.d_week_seq}) ==
      |                               ^
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:384:50: error: incompatible type for argument 2 of ‘strcmp’
  384 |         if (strcmp(wswscs[i13].name, (tmp_item_t){.week_seq = d.d_week_seq}) ==
      |                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                  |
      |                                                  tmp_item_t
In file included from /tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:4:
/usr/include/string.h:156:50: note: expected ‘const char *’ but argument is of type ‘tmp_item_t’
  156 | extern int strcmp (const char *__s1, const char *__s2)
      |                                      ~~~~~~~~~~~~^~~~
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:391:27: error: ‘wswscs_item_t’ has no member named ‘name’
  391 |         wswscs[wswscs_len].name = (tmp_item_t){.week_seq = d.d_week_seq};
      |                           ^
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:392:27: error: ‘wswscs_item_t’ has no member named ‘count’
  392 |         wswscs[wswscs_len].count = 1;
      |                           ^
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:396:22: error: ‘wswscs_item_t’ has no member named ‘count’
  396 |         wswscs[tmp12].count++;
      |                      ^
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:400:30: warning: implicit declaration of function ‘wswscs_item_list_t_create’ [-Wimplicit-function-declaration]
  400 |   wswscs_item_list_t tmp14 = wswscs_item_list_t_create(wswscs_len);
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:400:30: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:412:30: error: invalid initializer
  412 |   wswscs_item_list_t tmp17 = wswscs_item_list_t_create(wswscs_len);
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:424:30: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  424 |   result_item_list_t tmp20 = result_item_list_t_create(year1.len * year2.len);
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:424:30: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq2937939553/001/prog.c:462:33: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  462 |   test_TPCDS_Q2_result_result = result;
      |                                 ^~~~~~
